# FabricRanker-Mini-Project

./: README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt  settings_additions.py
config/: settings.py  urls.py
fabricranker/: admin.py  apps.py  forms.py  ml_predictor.py  models.py  urls.py  views.py
fabricranker/migrations/: 0001_initial.py
templates/: index.html
