[project]
name = "fabricranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
